added cart dialog

--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="register-card.html">
+<link rel="import" href="cart-control.html">
 <link rel="import" href="filter-card.html">
 <link rel="import" href="search-card.html">
 <link rel="import" href="item-card.html">
@@ -38,7 +39,10 @@
 	<paper-toolbar>
 	  <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
 	  <div class="title">Three Dope Boys</div>
+	  
+	  <div class="flex"></div>
 
+	  <cart-control></cart-control>
 	  <!-- action buttons here -->
 
 	</paper-toolbar>
