--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -10,6 +10,7 @@
 <link rel="import" href="cart-control.html">
 <link rel="import" href="filter-card.html">
 <link rel="import" href="search-card.html">
+<link rel="import" href="login-card.html">
 <link rel="import" href="item-card.html">
 
 <dom-module id="app-shell">
@@ -30,6 +31,7 @@
 	  <div class="title">Menu</div>
 	</paper-toolbar>
 	<div class="layout vertical center-justified">
+	  <login-card></login-card>
 	  <search-card></search-card>
 	  <filter-card></filter-card>
 	</div>
@@ -38,7 +40,7 @@
       <paper-header-panel main>
 	<paper-toolbar>
 	  <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-	  <div class="title">Three Dope Boys</div>
+	  <div class="title">Simple Store</div>
 	  
 	  <div class="flex"></div>
 
