--- a/components/register-card.html
+++ b/components/register-card.html
@@ -18,9 +18,8 @@
 	  <paper-input name="email" label="Email"></paper-input>
 	  <paper-input name="uname" label="Username"></paper-input>
 	  <paper-input name="pass" label="Password" type="password"></paper-input>
-	  <div class="buttons">
+	  <div class="buttons layout horizontal justified">
 	    <paper-button raised on-tap="close">Cancel</paper-button>
-	    <div class="flex"></div>
 	    <paper-button raised on-tap="register">Register</paper-button>
 	  </div>
 	</form>
@@ -50,7 +49,8 @@
 			if( e.detail.response && e.detail.response.result ) {
 				if( e.detail.response.result == "success" ) {
 					this.$.content.innerHTML = "Successfully registered, you may now login.";
-					this.async(this.close, 2000);
+    					this.async(this.close, 1000);
+    					this.async(this.registerSuccess, 1100);
 				} else {
 					this.$.content.innerHTML = e.detail.response.result;
 				}
@@ -60,7 +60,10 @@
 		},
 		close: function() {
 			this.visible = false;
-		}
+		},
+    registerSuccess: function() {
+    this.fire('register-success', {"registered": true});
+    }
     });
   </script>
 
